# mci

./: .envrc  Cargo.toml  Dockerfile  compose.yaml  flake.nix
migrations/2026-01-18-190701-0000_create_specs/: down.sql  up.sql
migrations/2026-02-10-115827-0000_create_definitions/: down.sql  up.sql
src/: config.rs  db.rs  errors.rs  http.rs  lib.rs  main.rs  models.rs  s3.rs  schema.rs  utils.rs
src/api/: handlers.rs  routes.rs
src/services/: definitions_services.rs  mod.rs  modules_services.rs  specs.rs
src/utils/: regex.rs  regex_utils.rs  source_utils.rs  stream_utils.rs
tests/: api_handlers.rs  common.rs  definition_serice.rs  module_service.rs  s3_put_stream.rs  test_s3_client.rs
