[package]
name = "mci"
version = "0.1.0"
edition = "2021"

[lib]
name = "mci"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
axum-macros = "0.5"
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2", features = ["postgres", "r2d2"] }
diesel_migrations = "2.2"
deadpool-diesel = "0.6"
aws-sdk-s3 = "1.120"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
tower-http = { version = "0.6", features = ["fs", "trace"] }
config = "0.15"
futures = "0.3"
validator = { version = "0.20", features = ["derive"] }
regex = "1.12"
reqwest = { version = "0.12", features = ["json", "stream"] }

[dev-dependencies]
tower = "0.5"
wiremock = "0.6"
tempfile = "3.24"
