[package]
name = "mci"
version = "0.1.0"
edition = "2021"

[lib]
name = "mci"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
axum-macros = "0.5"
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2", features = ["postgres", "r2d2"] }
diesel_migrations = "2.2"
deadpool-diesel = "0.6"
aws-sdk-s3 = { version = "1.120", features = ["behavior-version-latest"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-smithy-types = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
tower-http = { version = "0.6", features = ["fs", "trace"] }
config = "0.15"
futures = "0.3"
validator = { version = "0.20", features = ["derive"] }
regex = "1.12"
reqwest = { version = "0.12", features = ["json", "stream"] }
http-body-util = "0.1"
hyper = { version = "1.0", features = ["client"] }
url = "2.5"
sha2 = "0.10"
bytes = "1.11"
uuid = { version = "1.21", features = ["v4"] }

[dev-dependencies]
tower = "0.5"
temp-env = "0.3"
wiremock = "0.6"
tempfile = "3.24"
serial_test = "3.0"
aws-smithy-types = { version = "1.0", features = ["test-util"] }
aws-smithy-runtime = { version = "1.9", features = ["test-util", "client"] }
testcontainers-modules = { version = "0.14", features = ["minio", "postgres"] }
